--- a/app/styles/_bootstrapOverrides.scss
+++ b/app/styles/_bootstrapOverrides.scss
@@ -24,38 +24,6 @@
     border: 1px solid #ddd;
     }
 }
-// allows the pages to be completely responsive while still using production code
-@media screen and (max-width: 1200px) {
-    .base-layout, .base-layout-class {
-        .page-content-width {
-            width: unset;
-            min-width: unset;
-
-            .page-content-body {
-                width: unset;
-                min-width: unset;
-                display: unset;
-            }
-        }
-        .page-content-titles {
-            .page-content-titles-actions {
-                display: inline-block;
-                float: left;
-                margin-top: 20px;
-                margin-bottom: -5px;
-
-            }
-        }
-
-    }
-    .homepage-desktop {
-        .lessons-desktop {
-            .lesson-desktop {
-                width: unset ! important;
-            }
-        }
-    }
-}
 
 @media only screen and (min-device-width : 1024px) {
     .navbar-form .form-control.search-desktop {
